Fixed cta behvior on narrow screens

--- a/style.css
+++ b/style.css
@@ -124,7 +124,8 @@ main {
     margin-bottom: 4rem;
 }
 
-.story-text h2, .values h2 {
+.story-text h2,
+.values h2 {
     color: var(--main-bg-color);
     font-size: var(--info-txt);
     margin-bottom: 1rem;
@@ -175,7 +176,7 @@ main {
     align-self: center;
 }
 
-.signUp-container h1{
+.signUp-container h1 {
     text-align: center;
 }
 
@@ -303,12 +304,12 @@ footer {
 }
 
 @media (max-width: 768px) {
-    .values-container,
-    .cta-container {
+    .values-container {
         flex-direction: column;
     }
-    
-    .cta-container {
+
+    .cta {
+        flex-direction: column;
         text-align: center;
         gap: 2rem;
     }
